# student-management

./: README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/config/: database.py
backend/endpoint/: answer.py  api.py  attendance.py  questions.py  student.py  subject.py  teacher.py  todolist.py  token.py  user.py
backend/entities/: login.py
backend/models/: answer.py  attendance.py  base.py  login.py  questions.py  student.py  subject.py  teacher.py  todolist.py  token.py  user.py
backend/schemas/: answer.py  attendance.py  login.py  questions.py  student.py  subject.py  teacher.py  todolist.py  user.py
backend/sql/: a.sql  create_datalogin.sql  create_table.sql  insert_answers.sql  insert_questions.sql
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/src/: App.vue  main.ts
frontend/src/assets/css/: app.css
frontend/src/components/courses/: courses.vue
frontend/src/components/header/: header.vue
frontend/src/components/home/: about.vue  banner.vue  courses.vue  footer.vue  header.vue  home.vue  new.vue  partner.vue
frontend/src/components/login_register/: login.vue
frontend/src/components/main/: attendance.vue  fileassign.vue  homepage.vue  homework.vue  notifications.vue  results.vue  scores.vue  seltlearn.vue
frontend/src/components/navigation/: navigation.vue
frontend/src/links/: answer.js  attendance.js  course.js  index.js  questions.js  student.js  teacher.js  todolist.js  user.js
frontend/src/pages/: index.vue
frontend/src/router/: index.ts
(+32 files in other folders)
